--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -44,5 +44,20 @@
         android:layout_marginBottom="15dp"
         android:id="@+id/qrbutton"
         />
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/qr"
+        android:maxHeight="171dp"
+        android:maxWidth="445dp"
+        android:src="@drawable/authbouton"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/authbutton"
+        android:visibility="invisible"
+        />
 
 </LinearLayout>
