--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,12 +15,15 @@
         android:padding="30dp" />
     
     <TextView
+        android:id="@+id/identitytext"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
-        android:textColor="#FFFFFF"
+        android:layout_gravity="center_horizontal"
         android:background="#33000000"
-        android:text="hello"
-        android:id="@+id/identitytext" />
+        android:text="geo - geo@angelhack.com"
+        android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
     
     <ImageView
         android:layout_width="wrap_content"
