--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,6 +60,29 @@
         android:visibility="gone"
         />
 
+	<TextView
+        android:id="@+id/websitetext"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:text="angelhack.com"
+        android:paddingLeft="90dp"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        />
+
+	<TextView
+        android:id="@+id/questiontext"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        android:text="wants to identify you. Do you agree?"
+        android:paddingLeft="45dp"
+        android:textColor="#FFFFFF"
+        android:visibility="invisible"
+        />
+
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
