remove the button background, to display only the picture

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,13 +40,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/qr"
-        android:maxHeight="171dp"
-        android:maxWidth="445dp"
         android:src="@drawable/qr"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:background="#00000000"
         android:id="@+id/qrbutton"
         />
 
@@ -88,13 +83,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/qr"
-        android:maxHeight="171dp"
-        android:maxWidth="445dp"
         android:src="@drawable/authbouton"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:background="#00000000"
         android:id="@+id/authbutton"
         android:visibility="invisible"
         />
